--- a/themes/aircloud/source/css/aircloud.css
+++ b/themes/aircloud/source/css/aircloud.css
@@ -910,7 +910,7 @@ pre,
   padding: 0;
   font-size: 13px;
   color: #4d4d4c;
-  background: #ffffff;
+  background: #231c1c;
   line-height: 1.6;
 }
 pre,
