update theme css and blog config

--- a/themes/aircloud/source/css/aircloud.css
+++ b/themes/aircloud/source/css/aircloud.css
@@ -909,7 +909,7 @@ pre,
   margin: 20px 0;
   padding: 0;
   font-size: 13px;
-  color: #4d4d4c;
+  color: #d4cf00;
   background: #231c1c;
   line-height: 1.6;
 }
