--- a/themes/aircloud/layout/layout.ejs
+++ b/themes/aircloud/layout/layout.ejs
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- partial('_partial/head') %>
+<meta name="google-site-verification" content="fDu2EbXziVRK-QATAvl0GYkq0mLojeEfo2tAFJVbtek" />
+
 <body>
 
-<div class="site-nav-toggle" id="site-nav-toggle">
-    <button>
-        <span class="btn-bar"></span>
-        <span class="btn-bar"></span>
-        <span class="btn-bar"></span>
-    </button>
-</div>
+    <div class="site-nav-toggle" id="site-nav-toggle">
+        <button>
+            <span class="btn-bar"></span>
+            <span class="btn-bar"></span>
+            <span class="btn-bar"></span>
+        </button>
+    </div>
 
-<div class="index-about">
-    <i> <%= config.subtitle %> </i>
-</div>
+    <div class="index-about">
+        <i> <%= config.subtitle %> </i>
+    </div>
 
-<div class="index-container">
-    <% if(!is_current('/404')){%>
-    <div class="index-left">
-        <%- partial('_partial/nav', null, {cache: false}) %>
-        <div class="index-about-mobile">
-            <i> <%= config.subtitle %> </i>
+    <div class="index-container">
+        <% if(!is_current('/404')){%>
+        <div class="index-left">
+            <%- partial('_partial/nav', null, {cache: false}) %>
+            <div class="index-about-mobile">
+                <i> <%= config.subtitle %> </i>
+            </div>
+        </div>
+        <% } %>
+        <div class="index-middle">
+            <!-- Main Content -->
+            <%- body %>
         </div>
     </div>
-    <% } %>
-    <div class="index-middle">
-        <!-- Main Content -->
-        <%- body %>
-    </div>
-</div>
 
-<%- partial('_partial/footer', null, {cache: false}) %>
+    <%- partial('_partial/footer', null, {cache: false}) %>
 
 </body>
 
@@ -38,7 +40,7 @@
     // We expose some of the variables needed by the front end
     window.hexo_search_path = "<%- config.search ? config.search.path : ""%>"
     window.hexo_root = "<%- config.root %>"
-    window.isPost = <%- is_post() %>
+    window.isPost = <% - is_post() %>
 </script>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <%- js('js/index.js') %>
